# ModelTrainComms

./: Cargo.toml  build.bat  run.bat  rust-toolchain.toml  tree.txt
.cargo/: config.toml
lib/interfaces/: Cargo.toml
lib/interfaces/src/: comm_object.rs  encoding.rs  lib.rs
lib/interfaces/tests/: serialization_test.rs
