[package]
name = "interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.7.17", default-features = false }
postcard = { version = "=1.1.3", default-features = false, features = ["heapless", "heapless-cas"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
